fix image poster on mobile views

--- a/the-lion-king/css/main.css
+++ b/the-lion-king/css/main.css
@@ -139,6 +139,7 @@ nav .nav-list li a.active {
 }
 
 /*:::::::::: MODAL TICKETS ::::::::::*/
+
 .modal {
   display: none; /* hidden by default */
   position: fixed; /* stay in place */
@@ -149,7 +150,7 @@ nav .nav-list li a.active {
   width: 100%;
   height: 100%; 
   overflow: auto; /* enable scroll if needed */
-  background-color: rgb(0,0,0); /* fallback color */
+  background-color: var(--black-city-smoke); /* fallback color */
   background-color: rgba(0,0,0,0.4); /* black w/ opacity */
 }
 
@@ -208,7 +209,7 @@ nav .nav-list li a.active {
 
 .btn-search-tickets {
     border: none;
-    padding: 20px 30px;
+    padding: 20px 20px;
     background-color: var(--heart-red);
     color: var(--polar-bear);
     font-family: 'Cinzel';
@@ -220,6 +221,7 @@ nav .nav-list li a.active {
 }
 
 /*:::::::::: FOOTER :::::::::: */
+
 footer {
     background-color: #272222;
     color: #fff;
@@ -394,9 +396,12 @@ form {
     flex: 1; /* same as flex-grow: 1; */
 }
 
+
+
 /*:::::::::: MAKE IT RESPONSIVE ::::::::::*/
 
 /* navbar responsive */
+
 @media (max-width: 952px) {
     nav .nav-list li a {
         font-size: 0.7rem;
@@ -440,25 +445,11 @@ form {
 }
 
 /* dropdown menu responsive */
-@media all and (max-width: 952px) { 
-    .dropdown-content {
-        display: none;
-        font-size: 1rem;
-        margin-top: -55px;
-        margin-left: 130px;
-        position: absolute;
-        background-color: var(--black-city-smoke);
-        z-index: 1;
-      }
 
-    .dropdown-content .more-dropdown-list li a {
-        font-size: 0.8rem;
-    }   
-} 
-
-@media only screen and (max-width: 1366px) and (min-width: 1024px) {
+/* BIG SCREEN */
+@media only screen and (min-width: 1024px) and (max-width: 1366px) {
       .dropdown-content {
-        margin-left: 320px;
+        margin-left: -7.5px;
       }
       /* modal */
            .title {
@@ -470,23 +461,38 @@ form {
           .text {
             font-size: 1rem; 
           }
+
+          .poster-movie-img {
+            width: 100%;
+            height: 0 auto;
+        }
           .btn-search-tickets {
               font-size: 1rem;
           } 
 }
 
-/* SPECIAL FIX - dropdown-content list must be given a different margin-left on different screens */
-@media only screen and (max-width: 1024px) and (min-width: 770px) {
-      /* without z-index: 99, images will overlap the fixed navbar on scroll */  
+/* MEDIUM SCREEN */
+
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
       .nav {
-          z-index: 99;
+          z-index: 99; /* keeps the slide navbar attached to the visible navbar while scrolling the page */ 
           position: fixed;
       }
 
       .dropdown-content {
-        margin-left: -7.5px;
+        margin-top: -55px;
+        margin-left: 320px; /* SPECIAL FIX - dropdown-content list must be given a different margin-left on different screens */
       }
       /* modal */
+           .modal {
+             padding-top: 100px;
+           }
+
+           .poster-movie-img {
+            width: 90%;
+            height: 0 auto;
+        }
+           
            .title {
             font-size: 1.6rem;  
           }
@@ -501,39 +507,19 @@ form {
           }
 }
 
-@media only screen and (max-width: 768px) and (min-width: 377px) {
-    /* keeps the slide navbar attached to the visible navbar while scrolling the page */ 
-       nav {
-         position: fixed;
-         z-index: 99;
-        }
-        .dropdown-content {
-            margin-left: 320px;
-        }
-        /* modal */
-       .title {
-         font-size: 1.6rem;  
-       }
-       .subtitle {
-         font-size: 1.3rem; 
-       }
-       .text {
-         font-size: 1rem; 
-       }
-       .btn-search-tickets {
-           font-size: 1rem;
-       }
-    }   
+/* SMALL SCREEN */
     
-@media only screen and (min-width: 375px) and (max-width: 764px) {
-    /* keeps the slide navbar attached to the visible navbar while scrolling the page */ 
+@media only screen and (min-width: 375px) and (max-width: 765px) {
     nav {
         position: fixed;
-        z-index: 99;
+        z-index: 99;     /* keeps the slide navbar attached to the visible navbar while scrolling the page */ 
        }
+
        .dropdown-content {
-           margin-left: 127px;
-       }
+        margin-top: -55px;
+        margin-left: 127px;
+    }
+     
        /* modal */
       .title {
         font-size: 1.6rem;  
